<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="CONNECTION MANAGER"
                android:textSize="@dimen/separator_title_text_size"/>

            <CheckBox
                android:id="@+id/listenForIncomingConnectionCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Listen for incoming connections"
                android:textSize="@dimen/text_size_medium"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="Connection timeout (ms)"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/connectionTimeoutEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:singleLine="true"
                android:text="Use 0 for no timeout"
                android:textSize="@dimen/text_size_small"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="Insecure RFCOMM port"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/portNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:paddingBottom="@dimen/padding_medium"
                android:singleLine="false"
                android:text="@string/rfcomm_port_info"
                android:textSize="@dimen/text_size_small"/>

            <CheckBox
                android:id="@+id/handshakeRequiredCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Handshake required"
                android:textSize="@dimen/text_size_medium"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_section_padding"
                android:singleLine="true"
                android:text="DISCOVERY MANAGER"
                android:textSize="@dimen/separator_title_text_size"/>

            <CheckBox
                android:id="@+id/enableWifiCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enable Wi-Fi Direct"
                android:textSize="@dimen/text_size_medium"/>

            <CheckBox
                android:id="@+id/enableBleCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enable Bluetooth LE"
                android:textSize="@dimen/text_size_medium"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/manufacturer_id"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/manufacturerIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/beacon_ad_extra_information"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/extraInformationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:paddingBottom="@dimen/padding_medium"
                android:singleLine="false"
                android:text="@string/beacon_ad_extra_information_description"
                android:textSize="@dimen/text_size_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_small"
                android:singleLine="true"
                android:text="@string/advertisement_data_type"
                android:textSize="@dimen/text_size_medium"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/serviceDataRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/service"/>

                <RadioButton
                    android:id="@+id/manufacturerDataRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/manufacturer"/>

                <RadioButton
                    android:id="@+id/doNotCareRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/do_not_care"/>
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:paddingBottom="@dimen/padding_medium"
                android:singleLine="false"
                android:text="@string/do_not_care_info"
                android:textSize="@dimen/text_size_small"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="@dimen/list_item_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_small"
                    android:singleLine="true"
                    android:text="Advertise mode"
                    android:textSize="@dimen/text_size_medium"/>

                <Spinner
                    android:id="@+id/advertiseModeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_small"
                    android:singleLine="true"
                    android:text="Advertise TX power level"
                    android:textSize="@dimen/text_size_medium"/>

                <Spinner
                    android:id="@+id/advertiseTxPowerLevelSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_small"
                    android:singleLine="true"
                    android:text="Scan mode"
                    android:textSize="@dimen/text_size_medium"/>

                <Spinner
                    android:id="@+id/scanModeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_section_padding"
                android:singleLine="true"
                android:text="OTHER (APPLICATION SPECIFIC)"
                android:textSize="@dimen/separator_title_text_size"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:paddingBottom="@dimen/padding_medium"
                android:singleLine="false"
                android:text="@string/peer_name_info"
                android:textSize="@dimen/text_size_small"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="Buffer size (bytes)"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/bufferSizeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="Data amount to send (bytes)"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/dataAmountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/autoConnectCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="Enable auto-connect"
                    android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/autoConnectEvenWhenIncomingCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="Auto-connect even with incoming connections"
                    android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>